<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnvisaDroid</string>
    <string name="menu_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="arm">Arm</string>
    <string name="disarm">Disarm</string>
    <string name="tools">Tools</string>
    <string name="refresh">Refresh</string>
    <string name="log">Log</string>
    <string name="action_button">Action</string>
    <string name="zones">Zones</string>
    <string name="led_ready">Rdy</string>
    <string name="led_armed">Arm</string>
    <string name="led_mem">Mem</string>
    <string name="led_bypass">Byp</string>
    <string name="led_trouble">Trbl</string>
    <string name="led_program">Pgm</string>
    <string name="led_fire">Fire</string>
    <string name="led_backlight">Bklt</string>
    <string name="led_connection">Conn</string>
    <string name="title_activity_tools">ToolsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sync">SyncActivity</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

</resources>