<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gradient_start"
    android:padding="2dp" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:background="@color/gradient_start"
        android:gravity="start|center_vertical" >

        <LinearLayout
            android:id="@+id/filler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/armButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:button="@drawable/flat_button"
                android:drawableTop="@drawable/device_access_secure"
                android:enabled="false"
                android:onClick="armdisarm"
                android:text="@string/arm" />
            
             <Button
                android:id="@+id/toolsButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:button="@drawable/flat_button"
                android:drawableTop="@drawable/action_timers"
                android:enabled="true"
                android:onClick="tools"
                android:text="@string/tools" />

            <Button
                android:id="@+id/keypadButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:button="@drawable/flat_button"
                android:drawableTop="@drawable/keypad"
                android:enabled="true"
                android:onClick="keypad"
                android:text="@string/pad" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/chimeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/tools"
                android:enabled="false"
                android:gravity="center"
                android:src="@drawable/device_access_volume_off" />

            <ImageView
                android:id="@+id/alarmIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/tools"
                android:enabled="false"
                android:gravity="center"
                android:src="@drawable/megaphone_off" />

            <ImageView
                android:id="@+id/fireIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/tools"
                android:enabled="false"
                android:gravity="center"
                android:src="@drawable/device_access_flash_off" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.10" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:background="@color/gradient_start"
            android:padding="2dp"
            android:shrinkColumns="1"
            android:stretchColumns="2" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dip" >

                <RadioButton
                    android:id="@+id/ledReady"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:clickable="false"
                    android:focusable="false"
                    android:selectAllOnFocus="false"
                    android:text="@string/led_ready"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gradient_end" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dip" >

                <RadioButton
                    android:id="@+id/ledArmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:clickable="false"
                    android:focusable="false"
                    android:selectAllOnFocus="false"
                    android:text="@string/led_armed"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gradient_end" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dip" >

                <RadioButton
                    android:id="@+id/ledMem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:clickable="false"
                    android:focusable="false"
                    android:selectAllOnFocus="false"
                    android:text="@string/led_mem"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gradient_end" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dip" >

                <RadioButton
                    android:id="@+id/ledBypass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:clickable="false"
                    android:focusable="false"
                    android:selectAllOnFocus="false"
                    android:text="@string/led_bypass"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gradient_end" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dip" >

                <RadioButton
                    android:id="@+id/ledTrouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:clickable="false"
                    android:focusable="false"
                    android:selectAllOnFocus="false"
                    android:text="@string/led_trouble"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gradient_end" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dip" >

                <RadioButton
                    android:id="@+id/ledProgram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:clickable="false"
                    android:focusable="false"
                    android:selectAllOnFocus="false"
                    android:text="@string/led_program"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gradient_end" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dip" >

                <RadioButton
                    android:id="@+id/ledFire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/led_fire"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gradient_end" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dip" >

                <RadioButton
                    android:id="@+id/ledBacklight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:clickable="false"
                    android:focusable="false"
                    android:selectAllOnFocus="false"
                    android:text="@string/led_backlight"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gradient_end" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dip" >

                <RadioButton
                    android:id="@+id/ledConnection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:clickable="false"
                    android:focusable="false"
                    android:selectAllOnFocus="false"
                    android:text="@string/led_connection"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gradient_end" />
            </TableRow>
        </TableLayout>
<TableLayout
    android:layout_weight="0.95">
        <ExpandableListView
            android:id="@+id/zoneListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gradient_end"
            android:drawSelectorOnTop="true"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false" >
        </ExpandableListView>
        </TableLayout>
    </TableRow>

    <TextView
        android:id="@+id/textLogView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/blank"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/gradient_end" />

</TableLayout>